# dircopy

./: BUILD.bazel  README.md  WORKSPACE  go.mod  go.sum  main.go  repositories.bzl
cmd/: BUILD.bazel  root.go
